--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Sync:
 
     git clone http://path/to/your/vim.git C:\path\to\your\vimfiles
-    cp c:\path\to\your\vimfiles\_vimrc  c:\path\to\your\vim\_vimrc
+    fsutil hardlink create "c:\path\to\your\Vim\_vimrc"  "c:\path\to\your\Vim\vimfiles\_vimrc"
     cd c:\path\to\your\vimfiles
     git submodule init
     git submodule update
